--- a/report.html
+++ b/report.html
@@ -1,38 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Monthly Attendance Report</title>
-  <link href="style.css" rel="stylesheet">
-  <!-- Include SheetJS library for Excel generation -->
+  <link href="style.css" rel="stylesheet" />
+
+  <!-- SheetJS (for Excel export) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+
+  <!-- Bootstrap CSS & JS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="main.html">Attendance</a></li>
-      <li><a href="employees.html">Employees</a></li>
-      <li><a href="report.html">Monthly Report</a></li>
-      <li><a href="salary.html">Salary Calculator</a></li>
-      <li><a href="settings.html">Settings</a></li>
-      <li><a href="#" onclick="logout()">Logout</a></li>
-    </ul>
-  </nav>
-  <div class="container">
-    <h1>Monthly Attendance Report</h1>
-    <div class="card">
-      <div class="input-group">
-        <input id="monthInput" type="month">
-        <button onclick="generateReport()">Generate Report</button>
+  <!-- Bootstrap Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Jalaram Tools</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+              aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="main.html">Attendance</a></li>
+          <li class="nav-item"><a class="nav-link" href="employees.html">Employees</a></li>
+          <li class="nav-item"><a class="nav-link active" href="report.html">Monthly Report</a></li>
+          <li class="nav-item"><a class="nav-link" href="salary.html">Salary Calculator</a></li>
+          <li class="nav-item"><a class="nav-link" href="settings.html">Settings</a></li>
+          <li class="nav-item"><a class="nav-link text-danger" href="index.html">Logout</a></li>
+        </ul>
       </div>
-      <div id="monthInfo" class="month-info"></div>
-      <div id="reportTable"></div>
+    </div>
+  </nav>
+
+  <!-- Main Content -->
+  <div class="container mt-4">
+    <h1>Monthly Attendance Report</h1>
+    <div class="card p-4">
+      <div class="input-group mb-3">
+        <input id="monthInput" type="month" class="form-control" />
+        <button onclick="generateReport()" class="btn btn-primary">Generate Report</button>
+        <button onclick="downloadExcel()" class="btn btn-success ms-2">Download Excel</button>
+      </div>
+      <div id="monthInfo" class="month-info mb-2"></div>
+      <div id="reportTable" class="table-responsive"></div>
     </div>
   </div>
 
+  <!-- JavaScript Logic -->
   <script>
-    // Check if user is logged in
     if (localStorage.getItem('isLoggedIn') !== 'true') {
       window.location.href = 'login.html';
     }
@@ -48,19 +68,18 @@
         alert('Please select a month.');
         return;
       }
+
+      const [year, monthNum] = month.split('-');
       const employees = JSON.parse(localStorage.getItem('employees')) || [];
       const attendance = JSON.parse(localStorage.getItem('attendance')) || {};
-      const [year, monthNum] = month.split('-');
       const daysInMonth = new Date(year, monthNum, 0).getDate();
-      
-      // Display total days in the month
+      const weeks = Math.ceil(daysInMonth / 7);
+
       document.getElementById('monthInfo').innerHTML = `<p>Total Days in Month: ${daysInMonth}</p>`;
 
-      // Group days into weeks (7 days per week)
-      const weeks = Math.ceil(daysInMonth / 7);
       let table = `
-        <table>
-          <thead>
+        <table class="table table-bordered">
+          <thead class="table-light">
             <tr>
               <th>Employee</th>
               <th>Week 1<br>(1-7)</th>
@@ -75,62 +94,91 @@
           <tbody>
       `;
 
-      // Prepare data for Excel
+      employees.forEach((emp, index) => {
+        if (!emp || !emp.name) return;
+
+        table += `<tr><td>${emp.name}</td>`;
+        let totalPresent = 0;
+
+        for (let week = 0; week < weeks; week++) {
+          let weekAttendance = '';
+          const startDay = week * 7 + 1;
+          const endDay = Math.min(startDay + 6, daysInMonth);
+
+          for (let day = startDay; day <= endDay; day++) {
+            const date = `${year}-${monthNum.padStart(2, '0')}-${String(day).padStart(2, '0')}`;
+            const isPresent = attendance[date]?.[emp.name] || false;
+            weekAttendance += isPresent ? '✔️' : '❌';
+            if (isPresent) totalPresent++;
+          }
+
+          table += `<td>${weekAttendance}</td>`;
+        }
+
+        const totalAbsent = daysInMonth - totalPresent;
+        table += `<td>${totalPresent}</td><td>${totalAbsent}</td></tr>`;
+      });
+
+      table += '</tbody></table>';
+      document.getElementById('reportTable').innerHTML = table;
+    }
+
+    function downloadExcel() {
+      const month = document.getElementById('monthInput').value;
+      if (!month) {
+        alert('Please select a month.');
+        return;
+      }
+
+      const [year, monthNum] = month.split('-');
+      const employees = JSON.parse(localStorage.getItem('employees')) || [];
+      const attendance = JSON.parse(localStorage.getItem('attendance')) || {};
+      const daysInMonth = new Date(year, monthNum, 0).getDate();
+      const weeks = Math.ceil(daysInMonth / 7);
+
       const excelData = [];
       const headers = ['Employee', 'Week 1 (1-7)', 'Week 2 (8-14)', 'Week 3 (15-21)', 'Week 4 (22-28)'];
       if (daysInMonth > 28) headers.push('Week 5 (29-31)');
       headers.push('Total Present', 'Total Absent');
       excelData.push(headers);
 
-      employees.forEach((emp, index) => {
-        if (!emp || !emp.name) return; // Skip invalid entries
-        table += `<tr class="${index % 2 === 0 ? 'even-row' : 'odd-row'}"><td>${emp.name}</td>`;
-        
-        // Calculate weekly attendance for table display
+      employees.forEach(emp => {
+        if (!emp || !emp.name) return;
         let totalPresent = 0;
-        const rowData = [emp.name];
+        const row = [emp.name];
+
         for (let week = 0; week < weeks; week++) {
-          let weekAttendance = '';
-          let weekAttendanceExcel = '';
+          let weekData = '';
           const startDay = week * 7 + 1;
           const endDay = Math.min(startDay + 6, daysInMonth);
+
           for (let day = startDay; day <= endDay; day++) {
             const date = `${year}-${monthNum.padStart(2, '0')}-${String(day).padStart(2, '0')}`;
             const isPresent = attendance[date]?.[emp.name] || false;
-            weekAttendance += isPresent ? '<span class="present">✔️</span>' : '<span class="absent">❌</span>';
-            weekAttendanceExcel += isPresent ? '✔️' : '❌';
+            weekData += isPresent ? '✔️' : '❌';
             if (isPresent) totalPresent++;
           }
-          table += `<td>${weekAttendance}</td>`;
-          rowData.push(weekAttendanceExcel);
+
+          row.push(weekData);
         }
 
-        // Calculate total absent
         const totalAbsent = daysInMonth - totalPresent;
-        table += `<td>${totalPresent}</td><td>${totalAbsent}</td>`;
-        table += '</tr>';
-
-        // Add totals to Excel row
-        rowData.push(totalPresent, totalAbsent);
-        excelData.push(rowData);
+        row.push(totalPresent, totalAbsent);
+        excelData.push(row);
       });
-      table += '</tbody></table>';
-      document.getElementById('reportTable').innerHTML = table;
 
-      // Generate and download Excel file
       const wb = XLSX.utils.book_new();
       const ws = XLSX.utils.aoa_to_sheet(excelData);
       XLSX.utils.book_append_sheet(wb, ws, 'Attendance Report');
       XLSX.writeFile(wb, `Attendance_Report_${year}-${monthNum}.xlsx`);
     }
 
-    // Set current month and generate report on page load
+    // Set current month on page load
     window.onload = () => {
       const now = new Date();
       const year = now.getFullYear();
       const month = String(now.getMonth() + 1).padStart(2, '0');
       document.getElementById('monthInput').value = `${year}-${month}`;
-      generateReport();
     };
   </script>
 </body>
