--- a/main.html
+++ b/main.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +7,57 @@
   <link href="style.css" rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Bootstrap JS (for toggle) -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+  <style>
+    /* Shift Toggle Button */
+    .shift-toggle-btn {
+      padding: 4px 8px;
+      font-size: 0.8rem;
+      margin-left: 10px;
+    }
+    /* Shift Section Headers */
+    .shift-section {
+      margin-top: 20px;
+      border-top: 1px solid #e2e8f0;
+      padding-top: 10px;
+    }
+    .shift-section h4 {
+      color: #2c5282;
+      margin-bottom: 15px;
+    }
+    /* Checkbox Group */
+    .checkbox-group {
+      display: flex;
+      align-items: center;
+      padding: 8px 0;
+    }
+    /* Attendance Label */
+    .attendance-status {
+      margin-left: 10px;
+      font-weight: bold;
+      color: #2f855a; /* Green for Present */
+    }
+    .attendance-status.absent {
+      color: #c53030; /* Red for Absent */
+    }
+    /* Toast Styling */
+    .toast {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #2f855a;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 4px;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
+    .toast.show {
+      opacity: 1;
+    }
+  </style>
 </head>
-
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
@@ -21,7 +66,6 @@
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
@@ -49,49 +93,44 @@
 
   <div class="container">
     <h1>Mark Attendance</h1>
-
     <div class="card">
       <h2>Attendance for Selected Date</h2>
       <div class="input-group">
-        <input id="attendanceDate" type="date">
-        <button onclick="saveAttendance()" id="saveButton" class="primary-btn">Save</button>
+        <input id="attendanceDate" type="date" class="form-control">
+        <button onclick="saveAttendance()" id="saveButton" class="btn btn-primary">Save</button>
       </div>
       <div id="lockMessage" class="lock-message"></div>
-      <div id="attendanceList" class="attendance-list"></div>
+      <div id="attendanceList" class="attendance-list">
+        <div class="shift-section" id="morningShiftSection">
+          <h4>Morning Shift</h4>
+          <div id="morningShiftList"></div>
+        </div>
+        <div class="shift-section" id="nightShiftSection">
+          <h4>Night Shift</h4>
+          <div id="nightShiftList"></div>
+        </div>
+      </div>
     </div>
   </div>
 
   <script>
-
-    document.addEventListener('DOMContentLoaded', () => {
-      const burger = document.querySelector('.burger');
-      const navUl = document.querySelector('nav ul');
-
-      burger.addEventListener('click', () => {
-        navUl.classList.toggle('active');
-      });
-    });
     // Check if user is logged in
     if (localStorage.getItem('isLoggedIn') !== 'true') {
-      window.location.href = 'login.html';
+      window.location.href = 'index.html';
     }
 
     function logout() {
       localStorage.removeItem('isLoggedIn');
-      window.location.href = 'login.html';
-    }
-
-    function toggleMenu() {
-      const menu = document.getElementById('navMenu');
-      menu.classList.toggle('show');
+      window.location.href = 'index.html';
     }
 
     let employees = JSON.parse(localStorage.getItem('employees')) || [];
     let attendance = JSON.parse(localStorage.getItem('attendance')) || {};
     let lockedDates = JSON.parse(localStorage.getItem('lockedDates')) || [];
     let unlockedDates = JSON.parse(localStorage.getItem('unlockedDates')) || [];
+    let shifts = JSON.parse(localStorage.getItem('shifts')) || {};
 
-    // Validate and clean employee data on load
+    // Validate and clean employee data
     employees = employees.filter(emp => emp && typeof emp === 'object' && emp.name && !isNaN(emp.salary));
     localStorage.setItem('employees', JSON.stringify(employees));
 
@@ -99,10 +138,14 @@
       const date = document.getElementById('attendanceDate').value;
       const lockMessage = document.getElementById('lockMessage');
       const saveButton = document.getElementById('saveButton');
+      const morningList = document.getElementById('morningShiftList');
+      const nightList = document.getElementById('nightShiftList');
 
       if (!date) {
         lockMessage.textContent = '';
         saveButton.disabled = true;
+        morningList.innerHTML = '';
+        nightList.innerHTML = '';
         return;
       }
 
@@ -110,29 +153,55 @@
       lockMessage.textContent = isLocked ? `Attendance for ${formatDate(date)} is locked. Unlock in Settings to modify.` : '';
       saveButton.disabled = isLocked;
 
-      const list = document.getElementById('attendanceList');
-      list.innerHTML = '';
+      morningList.innerHTML = '';
+      nightList.innerHTML = '';
 
       if (employees.length === 0) {
-        list.innerHTML = '<p class="no-data">No employees found. Add employees first.</p>';
+        morningList.innerHTML = '<p class="no-data">No employees found. Add employees first.</p>';
         return;
       }
 
+      shifts[date] = shifts[date] || {};
       employees.forEach(emp => {
         if (!emp || !emp.name || isNaN(emp.salary)) return;
+
+        // Default to morning shift if not assigned
+        if (!shifts[date][emp.name]) {
+          shifts[date][emp.name] = 'morning';
+        }
+        const shift = shifts[date][emp.name];
+        const targetList = shift === 'morning' ? morningList : nightList;
 
         const div = document.createElement('div');
         div.className = 'checkbox-group';
         const isChecked = attendance[date]?.[emp.name] !== undefined ? attendance[date][emp.name] : true;
         div.innerHTML = `
-          <input type="checkbox" id="${emp.name}-${date}" ${isChecked ? 'checked' : ''} ${isLocked ? 'disabled' : ''}>
+          <input type="checkbox" id="${emp.name}-${date}" ${isChecked ? 'checked' : ''} ${isLocked ? 'disabled' : ''} onchange="updateAttendanceStatus('${emp.name}-${date}')">
           <label for="${emp.name}-${date}" class="employee-label">
             <span class="emp-name">${emp.name}</span>
             <span class="emp-salary">₹${emp.salary}/month</span>
+            <span id="status-${emp.name}-${date}" class="attendance-status ${isChecked ? '' : 'absent'}">${isChecked ? 'Present' : 'Absent'}</span>
           </label>
+          <button class="btn btn-sm btn-outline-primary shift-toggle-btn" onclick="toggleShift('${emp.name}', '${date}')" ${isLocked ? 'disabled' : ''}>↑↓</button>
         `;
-        list.appendChild(div);
+        targetList.appendChild(div);
       });
+      localStorage.setItem('shifts', JSON.stringify(shifts));
+    }
+
+    function updateAttendanceStatus(id) {
+      const checkbox = document.getElementById(id);
+      const statusSpan = document.getElementById(`status-${id}`);
+      statusSpan.textContent = checkbox.checked ? 'Present' : 'Absent';
+      statusSpan.className = `attendance-status ${checkbox.checked ? '' : 'absent'}`;
+    }
+
+    function toggleShift(empName, date) {
+      shifts[date] = shifts[date] || {};
+      shifts[date][empName] = shifts[date][empName] === 'morning' ? 'night' : 'morning';
+      localStorage.setItem('shifts', JSON.stringify(shifts));
+      loadEmployeesForAttendance();
+      showToast(`Shift updated for ${empName}`);
     }
 
     function saveAttendance() {
@@ -142,7 +211,6 @@
         return;
       }
 
-      // Save attendance
       attendance[date] = attendance[date] || {};
       employees.forEach(emp => {
         if (!emp || !emp.name) return;
@@ -150,7 +218,6 @@
       });
       localStorage.setItem('attendance', JSON.stringify(attendance));
 
-      // Lock the date if not already locked
       if (!lockedDates.includes(date)) {
         lockedDates.push(date);
         localStorage.setItem('lockedDates', JSON.stringify(lockedDates));
@@ -170,7 +237,6 @@
       toast.className = 'toast';
       toast.textContent = message;
       document.body.appendChild(toast);
-
       setTimeout(() => {
         toast.classList.add('show');
         setTimeout(() => {
@@ -182,7 +248,7 @@
       }, 10);
     }
 
-    // Set today's date and load employees on page load
+    // Set today's date and load employees
     window.onload = () => {
       const today = new Date().toISOString().split('T')[0];
       document.getElementById('attendanceDate').value = today;
@@ -191,5 +257,4 @@
     };
   </script>
 </body>
-
 </html>
