--- a/salary.html
+++ b/salary.html
@@ -5,40 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Salary Calculator</title>
   <link href="style.css" rel="stylesheet">
-   <!-- Bootstrap CSS -->
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Bootstrap JS (for toggle) -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Jalaram Tools</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+              aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="main.html">Attendance</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="employees.html">Employees</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="report.html">Monthly Report</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="salary.html">Salary Calculator</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="settings.html">Settings</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-danger" href="index.html">Logout</a>
-          </li>
+          <li class="nav-item"><a class="nav-link" href="main.html">Attendance</a></li>
+          <li class="nav-item"><a class="nav-link" href="employees.html">Employees</a></li>
+          <li class="nav-item"><a class="nav-link active" href="report.html">Monthly Report</a></li>
+          <li class="nav-item"><a class="nav-link" href="salary.html">Salary Calculator</a></li>
+          <li class="nav-item"><a class="nav-link" href="settings.html">Settings</a></li>
+          <li class="nav-item"><a class="nav-link text-danger" href="index.html">Logout</a></li>
         </ul>
       </div>
     </div>
@@ -46,8 +35,8 @@
   <div class="container">
     <h1>Salary Calculator</h1>
     <div class="card">
-      <div class="input-group">
-        <input id="monthInput" type="month">
+      <div style="width: 30%;" class="input-group">
+        <input  id="monthInput" type="month">
         <button onclick="calculateSalaries()">Calculate Salaries</button>
       </div>
       <div id="salaryTable"></div>
