--- a/main.html
+++ b/main.html
@@ -96,7 +96,7 @@
     <div class="card">
       <h2>Attendance for Selected Date</h2>
       <div class="input-group">
-        <input id="attendanceDate" type="date" class="form-control">
+        <input style="width: 50%;" id="attendanceDate" type="date" class="form-control">
         <button onclick="saveAttendance()" id="saveButton" class="btn btn-primary">Save</button>
       </div>
       <div id="lockMessage" class="lock-message"></div>
