--- a/report.html
+++ b/report.html
@@ -42,7 +42,7 @@
     <h1>Monthly Attendance Report</h1>
     <div class="card p-4">
       <div class="input-group mb-3">
-        <input id="monthInput" type="month" class="form-control" />
+        <input style="width: 30%;" id="monthInput" type="month" class="form-control" />
         <button onclick="generateReport()" class="btn btn-primary">Generate Report</button>
         <button onclick="downloadExcel()" class="btn btn-success ms-2">Download Excel</button>
       </div>
