--- a/salary.html
+++ b/salary.html
@@ -35,8 +35,8 @@
   <div class="container">
     <h1>Salary Calculator</h1>
     <div class="card">
-      <div style="width: 30%;" class="input-group">
-        <input  id="monthInput" type="month">
+      <div class="input-group">
+        <input style="width: 30%;"   id="monthInput" type="month">
         <button onclick="calculateSalaries()">Calculate Salaries</button>
       </div>
       <div id="salaryTable"></div>
