--- a/settings.html
+++ b/settings.html
@@ -49,8 +49,8 @@
       <!-- Unlock Dates Section -->
       <div class="card">
         <h2>Unlock Dates</h2>
-        <div style="width: 25%;" class="input-group">
-          <input id="dateToUnlock" type="date">
+        <div class="input-group">
+          <input  style="width: 25%;" id="dateToUnlock" type="date">
           <button onclick="unlockDate()">Unlock Date</button>
         </div>
         <div id="unlockedDatesList"></div>
