--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Login to Salary and Attendance Calculator</h1>
+    <h1>Jalaram_Attendence</h1>
     <div class="card login-card">
       <div class="input-group">
         <input id="username" type="text" placeholder="Username" autocomplete="username">
