--- a/main.html
+++ b/main.html
@@ -5,18 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Attendance Marking</title>
   <link href="style.css" rel="stylesheet">
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
   <style>
-    /* Shift Toggle Button */
     .shift-toggle-btn {
       padding: 4px 8px;
       font-size: 0.8rem;
       margin-left: 10px;
     }
-    /* Shift Section Headers */
     .shift-section {
       margin-top: 20px;
       border-top: 1px solid #e2e8f0;
@@ -26,22 +23,19 @@
       color: #2c5282;
       margin-bottom: 15px;
     }
-    /* Checkbox Group */
     .checkbox-group {
       display: flex;
       align-items: center;
       padding: 8px 0;
     }
-    /* Attendance Label */
     .attendance-status {
       margin-left: 10px;
       font-weight: bold;
-      color: #2f855a; /* Green for Present */
+      color: #2f855a;
     }
     .attendance-status.absent {
-      color: #c53030; /* Red for Absent */
+      color: #c53030;
     }
-    /* Toast Styling */
     .toast {
       position: fixed;
       bottom: 20px;
@@ -55,6 +49,11 @@
     }
     .toast.show {
       opacity: 1;
+    }
+    .attendance-toggle-btn {
+      padding: 4px 8px;
+      font-size: 0.8rem;
+      margin-right: 10px;
     }
   </style>
 </head>
@@ -78,7 +77,7 @@
             <a class="nav-link" href="report.html">Monthly Report</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="salary.html">Salary Calculator</a>
+            <a class="nav-link" href="Loan&Adv.html">Loan</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="settings.html">Settings</a>
@@ -90,7 +89,6 @@
       </div>
     </div>
   </nav>
-
   <div class="container">
     <h1>Mark Attendance</h1>
     <div class="card">
@@ -98,8 +96,14 @@
       <div class="input-group">
         <input style="width: 50%;" id="attendanceDate" type="date" class="form-control">
         <button onclick="saveAttendance()" id="saveButton" class="btn btn-primary">Save</button>
+        <button onclick="resetAttendance()" id="resetButton" class="btn btn-danger">Reset</button>
       </div>
       <div id="lockMessage" class="lock-message"></div>
+      <div class="attendance-info" id="attendance-info"></div>
+      <div class="checkbox-group">
+        <input type="checkbox" id="show-present-only" onchange="loadEmployeesForAttendance()">
+        <label for="show-present-only">Show Present Employees Only</label>
+      </div>
       <div id="attendanceList" class="attendance-list">
         <div class="shift-section" id="morningShiftSection">
           <h4>Morning Shift</h4>
@@ -114,7 +118,6 @@
   </div>
 
   <script>
-    // Check if user is logged in
     if (localStorage.getItem('isLoggedIn') !== 'true') {
       window.location.href = 'index.html';
     }
@@ -131,69 +134,79 @@
     let shifts = JSON.parse(localStorage.getItem('shifts')) || {};
 
     // Validate and clean employee data
-    employees = employees.filter(emp => emp && typeof emp === 'object' && emp.name && !isNaN(emp.salary));
+    employees = employees.filter(emp => emp && typeof emp === 'object' && emp.name && !isNaN(emp.basic) && !isNaN(emp.hra) && !isNaN(emp.conveyance) && !isNaN(emp.others) && !isNaN(emp.totalSalary));
     localStorage.setItem('employees', JSON.stringify(employees));
 
     function loadEmployeesForAttendance() {
       const date = document.getElementById('attendanceDate').value;
       const lockMessage = document.getElementById('lockMessage');
       const saveButton = document.getElementById('saveButton');
+      const resetButton = document.getElementById('resetButton');
       const morningList = document.getElementById('morningShiftList');
       const nightList = document.getElementById('nightShiftList');
+      const showPresentOnly = document.getElementById('show-present-only').checked;
 
       if (!date) {
         lockMessage.textContent = '';
         saveButton.disabled = true;
+        resetButton.disabled = true;
         morningList.innerHTML = '';
         nightList.innerHTML = '';
+        document.getElementById('attendance-info').textContent = '';
         return;
       }
 
       const isLocked = lockedDates.includes(date) && !unlockedDates.includes(date);
       lockMessage.textContent = isLocked ? `Attendance for ${formatDate(date)} is locked. Unlock in Settings to modify.` : '';
       saveButton.disabled = isLocked;
+      resetButton.disabled = isLocked;
 
       morningList.innerHTML = '';
       nightList.innerHTML = '';
 
       if (employees.length === 0) {
         morningList.innerHTML = '<p class="no-data">No employees found. Add employees first.</p>';
+        document.getElementById('attendance-info').textContent = '';
         return;
       }
 
       shifts[date] = shifts[date] || {};
+      let presentCount = 0;
       employees.forEach(emp => {
-        if (!emp || !emp.name || isNaN(emp.salary)) return;
+        if (!emp || !emp.name || isNaN(emp.totalSalary)) return;
 
-        // Default to morning shift if not assigned
         if (!shifts[date][emp.name]) {
           shifts[date][emp.name] = 'morning';
         }
         const shift = shifts[date][emp.name];
-        const targetList = shift === 'morning' ? morningList : nightList;
+        const isPresent = attendance[date]?.[emp.name] !== undefined ? attendance[date][emp.name] : true;
+        if (isPresent) presentCount++;
 
+        if (showPresentOnly && !isPresent) return;
+
+        const targetList = shift === 'morning' ? morningList : nightList;
         const div = document.createElement('div');
         div.className = 'checkbox-group';
-        const isChecked = attendance[date]?.[emp.name] !== undefined ? attendance[date][emp.name] : true;
         div.innerHTML = `
-          <input type="checkbox" id="${emp.name}-${date}" ${isChecked ? 'checked' : ''} ${isLocked ? 'disabled' : ''} onchange="updateAttendanceStatus('${emp.name}-${date}')">
-          <label for="${emp.name}-${date}" class="employee-label">
+          <button class="btn btn-sm btn-outline-${isPresent ? 'success' : 'danger'} attendance-toggle-btn" id="${emp.name}-${date}" onclick="updateAttendanceStatus('${emp.name}', '${date}')" ${isLocked ? 'disabled' : ''}>${isPresent ? 'Present' : 'Absent'}</button>
+          <label class="employee-label">
             <span class="emp-name">${emp.name}</span>
-            <span class="emp-salary">₹${emp.salary}/month</span>
-            <span id="status-${emp.name}-${date}" class="attendance-status ${isChecked ? '' : 'absent'}">${isChecked ? 'Present' : 'Absent'}</span>
+            <span class="emp-salary">₹${emp.totalSalary}/month</span>
+            <span id="status-${emp.name}-${date}" class="attendance-status ${isPresent ? '' : 'absent'}">${isPresent ? 'Present' : 'Absent'}</span>
           </label>
           <button class="btn btn-sm btn-outline-primary shift-toggle-btn" onclick="toggleShift('${emp.name}', '${date}')" ${isLocked ? 'disabled' : ''}>↑↓</button>
         `;
         targetList.appendChild(div);
       });
       localStorage.setItem('shifts', JSON.stringify(shifts));
+      document.getElementById('attendance-info').textContent = `Present: ${presentCount} / ${employees.length}`;
     }
 
-    function updateAttendanceStatus(id) {
-      const checkbox = document.getElementById(id);
-      const statusSpan = document.getElementById(`status-${id}`);
-      statusSpan.textContent = checkbox.checked ? 'Present' : 'Absent';
-      statusSpan.className = `attendance-status ${checkbox.checked ? '' : 'absent'}`;
+    function updateAttendanceStatus(empName, date) {
+      attendance[date] = attendance[date] || {};
+      attendance[date][empName] = !attendance[date][empName]; // Toggle true/false
+      loadEmployeesForAttendance();
+      showToast(`Attendance updated for ${empName}`);
     }
 
     function toggleShift(empName, date) {
@@ -214,7 +227,7 @@
       attendance[date] = attendance[date] || {};
       employees.forEach(emp => {
         if (!emp || !emp.name) return;
-        attendance[date][emp.name] = document.getElementById(`${emp.name}-${date}`)?.checked || false;
+        attendance[date][emp.name] = attendance[date][emp.name] !== undefined ? attendance[date][emp.name] : true;
       });
       localStorage.setItem('attendance', JSON.stringify(attendance));
 
@@ -225,6 +238,24 @@
 
       loadEmployeesForAttendance();
       showToast('Attendance saved successfully!');
+    }
+
+    function resetAttendance() {
+      const date = document.getElementById('attendanceDate').value;
+      if (!date) {
+        alert('Please select a date.');
+        return;
+      }
+      if (!confirm('Reset all attendance to absent for this date?')) return;
+
+      attendance[date] = attendance[date] || {};
+      employees.forEach(emp => {
+        if (!emp || !emp.name) return;
+        attendance[date][emp.name] = false;
+      });
+      localStorage.setItem('attendance', JSON.stringify(attendance));
+      loadEmployeesForAttendance();
+      showToast('Attendance reset successfully!');
     }
 
     function formatDate(dateString) {
@@ -248,7 +279,6 @@
       }, 10);
     }
 
-    // Set today's date and load employees
     window.onload = () => {
       const today = new Date().toISOString().split('T')[0];
       document.getElementById('attendanceDate').value = today;
