--- a/report.html
+++ b/report.html
@@ -1,35 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Monthly Attendance Report</title>
-  <link href="style.css" rel="stylesheet" />
-
-  <!-- SheetJS (for Excel export) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-
-  <!-- Bootstrap CSS & JS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Monthly Report</title>
+  <link href="style.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 <body>
-  <!-- Bootstrap Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Jalaram Tools</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-              data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-              aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="main.html">Attendance</a></li>
           <li class="nav-item"><a class="nav-link" href="employees.html">Employees</a></li>
           <li class="nav-item"><a class="nav-link active" href="report.html">Monthly Report</a></li>
-          <li class="nav-item"><a class="nav-link" href="salary.html">Salary Calculator</a></li>
+          <li class="nav-item"><a class="nav-link active" href="Loan&Adv.html">loan</a></li>
+
           <li class="nav-item"><a class="nav-link" href="settings.html">Settings</a></li>
           <li class="nav-item"><a class="nav-link text-danger" href="index.html">Logout</a></li>
         </ul>
@@ -37,148 +30,159 @@
     </div>
   </nav>
 
-  <!-- Main Content -->
-  <div class="container mt-4">
-    <h1>Monthly Attendance Report</h1>
-    <div class="card p-4">
-      <div class="input-group mb-3">
-        <input style="width: 30%;" id="monthInput" type="month" class="form-control" />
-        <button onclick="generateReport()" class="btn btn-primary">Generate Report</button>
-        <button onclick="downloadExcel()" class="btn btn-success ms-2">Download Excel</button>
+  <div class="container">
+    <h1>Monthly Report</h1>
+    <div class="card">
+      <h2>Select Month</h2>
+      <div class="input-group">
+        <input type="month" id="reportMonth" class="form-control">
+        <button onclick="generateReport()" class="btn btn-primary">Generate</button>
+        <button onclick="downloadExcel()" class="btn btn-success">Download Excel</button>
       </div>
-      <div id="monthInfo" class="month-info mb-2"></div>
-      <div id="reportTable" class="table-responsive"></div>
+      <div id="monthInfo" class="mt-3"></div>
+      <table id="reportTable" class="table table-bordered mt-3">
+        <thead>
+          <tr>
+            <th>Employee</th>
+            <th>Present</th>
+            <th>Absent</th>
+            <th>Morning</th>
+            <th>Night</th>
+            <th>Basic (₹)</th>
+            <th>HRA (₹)</th>
+            <th>Conveyance (₹)</th>
+            <th>Others (₹)</th>
+            <th>Total (₹)</th>
+            <th>Loan EMI (₹)</th>
+            <th>Advance (₹)</th>
+            <th>Net Salary (₹)</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
   </div>
 
-  <!-- JavaScript Logic -->
   <script>
     if (localStorage.getItem('isLoggedIn') !== 'true') {
-      window.location.href = 'login.html';
-    }
-
-    function logout() {
-      localStorage.removeItem('isLoggedIn');
-      window.location.href = 'login.html';
+      window.location.href = 'index.html';
     }
 
     function generateReport() {
-      const month = document.getElementById('monthInput').value;
-      if (!month) {
-        alert('Please select a month.');
-        return;
-      }
+      const month = document.getElementById('reportMonth').value;
+      if (!month) return alert('Please select a month.');
 
-      const [year, monthNum] = month.split('-');
       const employees = JSON.parse(localStorage.getItem('employees')) || [];
       const attendance = JSON.parse(localStorage.getItem('attendance')) || {};
+      const shifts = JSON.parse(localStorage.getItem('shifts')) || {};
+      const advances = JSON.parse(localStorage.getItem('advances')) || {};
+      const loans = JSON.parse(localStorage.getItem('loans')) || {};
+
+      const tbody = document.getElementById('reportTable').querySelector('tbody');
+      tbody.innerHTML = '';
+
+      const [year, monthNum] = month.split('-');
       const daysInMonth = new Date(year, monthNum, 0).getDate();
-      const weeks = Math.ceil(daysInMonth / 7);
 
-      document.getElementById('monthInfo').innerHTML = `<p>Total Days in Month: ${daysInMonth}</p>`;
-
-      let table = `
-        <table class="table table-bordered">
-          <thead class="table-light">
-            <tr>
-              <th>Employee</th>
-              <th>Week 1<br>(1-7)</th>
-              <th>Week 2<br>(8-14)</th>
-              <th>Week 3<br>(15-21)</th>
-              <th>Week 4<br>(22-28)</th>
-              ${daysInMonth > 28 ? '<th>Week 5<br>(29-31)</th>' : ''}
-              <th>Total Present</th>
-              <th>Total Absent</th>
-            </tr>
-          </thead>
-          <tbody>
-      `;
+      let totalPresent = 0;
+      let totalAbsent = 0;
 
       employees.forEach((emp, index) => {
         if (!emp || !emp.name) return;
 
-        table += `<tr><td>${emp.name}</td>`;
-        let totalPresent = 0;
+        let presentDays = 0;
+        let absentDays = 0;
+        let morningShifts = 0;
+        let nightShifts = 0;
 
-        for (let week = 0; week < weeks; week++) {
-          let weekAttendance = '';
-          const startDay = week * 7 + 1;
-          const endDay = Math.min(startDay + 6, daysInMonth);
+        for (let day = 1; day <= daysInMonth; day++) {
+          const date = `${year}-${monthNum.padStart(2, '0')}-${String(day).padStart(2, '0')}`;
+          const isPresent = attendance[date]?.[emp.name] || false;
+          const shift = shifts[date]?.[emp.name] || 'morning';
 
-          for (let day = startDay; day <= endDay; day++) {
-            const date = `${year}-${monthNum.padStart(2, '0')}-${String(day).padStart(2, '0')}`;
-            const isPresent = attendance[date]?.[emp.name] || false;
-            weekAttendance += isPresent ? '✔️' : '❌';
-            if (isPresent) totalPresent++;
+          if (isPresent) {
+            presentDays++;
+            totalPresent++;
+            if (shift === 'morning') morningShifts++;
+            else nightShifts++;
+          } else {
+            absentDays++;
+            totalAbsent++;
           }
-
-          table += `<td>${weekAttendance}</td>`;
         }
 
-        const totalAbsent = daysInMonth - totalPresent;
-        table += `<td>${totalPresent}</td><td>${totalAbsent}</td></tr>`;
+        const dailySalary = emp.totalSalary / daysInMonth;
+        const payableBasic = (emp.basic / daysInMonth * presentDays).toFixed(2);
+        const payableHra = (emp.hra / daysInMonth * presentDays).toFixed(2);
+        const payableConveyance = (emp.conveyance / daysInMonth * presentDays).toFixed(2);
+        const payableOthers = (emp.others / daysInMonth * presentDays).toFixed(2);
+        const totalSalary = (dailySalary * presentDays).toFixed(2);
+
+        const loanList = loans[emp.name] || [];
+        const totalLoanEMI = loanList.reduce((sum, l) => sum + (l.emi && l.remaining > 0 ? l.emi : 0), 0);
+        loanList.forEach(l => {
+          if (l.remaining > 0) l.remaining = Math.max(0, l.remaining - l.emi);
+        });
+
+        const advanceList = advances[emp.name] || [];
+        const totalAdvance = advanceList.reduce((sum, adv) => sum + (adv.amount || 0), 0);
+
+        const netSalary = (totalSalary - totalLoanEMI - totalAdvance).toFixed(2);
+
+        // Remove advance record only after successful download
+        sessionStorage.setItem(`advanceToClear_${emp.name}`, JSON.stringify(advanceList));
+
+        const tr = document.createElement('tr');
+        tr.className = index % 2 === 0 ? 'even-row' : 'odd-row';
+        tr.innerHTML = `
+          <td>${emp.name}</td>
+          <td>${presentDays}</td>
+          <td>${absentDays}</td>
+          <td>${morningShifts}</td>
+          <td>${nightShifts}</td>
+          <td>₹${payableBasic}</td>
+          <td>₹${payableHra}</td>
+          <td>₹${payableConveyance}</td>
+          <td>₹${payableOthers}</td>
+          <td>₹${totalSalary}</td>
+          <td>₹${totalLoanEMI}</td>
+          <td>₹${totalAdvance}</td>
+          <td>₹${netSalary}</td>`;
+        tbody.appendChild(tr);
       });
 
-      table += '</tbody></table>';
-      document.getElementById('reportTable').innerHTML = table;
+      localStorage.setItem('loans', JSON.stringify(loans));
+      document.getElementById('monthInfo').textContent = `Total Present: ${totalPresent}, Total Absent: ${totalAbsent}`;
     }
 
     function downloadExcel() {
-      const month = document.getElementById('monthInput').value;
-      if (!month) {
-        alert('Please select a month.');
-        return;
-      }
-
-      const [year, monthNum] = month.split('-');
-      const employees = JSON.parse(localStorage.getItem('employees')) || [];
-      const attendance = JSON.parse(localStorage.getItem('attendance')) || {};
-      const daysInMonth = new Date(year, monthNum, 0).getDate();
-      const weeks = Math.ceil(daysInMonth / 7);
-
-      const excelData = [];
-      const headers = ['Employee', 'Week 1 (1-7)', 'Week 2 (8-14)', 'Week 3 (15-21)', 'Week 4 (22-28)'];
-      if (daysInMonth > 28) headers.push('Week 5 (29-31)');
-      headers.push('Total Present', 'Total Absent');
-      excelData.push(headers);
-
-      employees.forEach(emp => {
-        if (!emp || !emp.name) return;
-        let totalPresent = 0;
-        const row = [emp.name];
-
-        for (let week = 0; week < weeks; week++) {
-          let weekData = '';
-          const startDay = week * 7 + 1;
-          const endDay = Math.min(startDay + 6, daysInMonth);
-
-          for (let day = startDay; day <= endDay; day++) {
-            const date = `${year}-${monthNum.padStart(2, '0')}-${String(day).padStart(2, '0')}`;
-            const isPresent = attendance[date]?.[emp.name] || false;
-            weekData += isPresent ? '✔️' : '❌';
-            if (isPresent) totalPresent++;
-          }
-
-          row.push(weekData);
-        }
-
-        const totalAbsent = daysInMonth - totalPresent;
-        row.push(totalPresent, totalAbsent);
-        excelData.push(row);
-      });
+      const table = document.getElementById("reportTable");
+      if (!table || table.rows.length <= 1) return alert("Please generate the report first.");
 
       const wb = XLSX.utils.book_new();
-      const ws = XLSX.utils.aoa_to_sheet(excelData);
-      XLSX.utils.book_append_sheet(wb, ws, 'Attendance Report');
-      XLSX.writeFile(wb, `Attendance_Report_${year}-${monthNum}.xlsx`);
+      const ws = XLSX.utils.table_to_sheet(table);
+      XLSX.utils.book_append_sheet(wb, ws, "Monthly Report");
+
+      const month = document.getElementById("reportMonth").value;
+      const filename = month ? `Monthly_Report_${month}.xlsx` : `Monthly_Report.xlsx`;
+
+      XLSX.writeFile(wb, filename);
+
+      // Clear advance after download
+      const advances = JSON.parse(localStorage.getItem("advances")) || {};
+      for (const key in advances) {
+        if (sessionStorage.getItem(`advanceToClear_${key}`)) {
+          advances[key] = [];
+          sessionStorage.removeItem(`advanceToClear_${key}`);
+        }
+      }
+      localStorage.setItem("advances", JSON.stringify(advances));
     }
 
-    // Set current month on page load
     window.onload = () => {
-      const now = new Date();
-      const year = now.getFullYear();
-      const month = String(now.getMonth() + 1).padStart(2, '0');
-      document.getElementById('monthInput').value = `${year}-${month}`;
+      const today = new Date();
+      document.getElementById('reportMonth').value = `${today.getFullYear()}-${String(today.getMonth() + 1).padStart(2, '0')}`;
+      generateReport();
     };
   </script>
 </body>
