--- a/settings.html
+++ b/settings.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Jalaram Tools</a>
@@ -40,6 +43,14 @@
       </div>
     </div>
   </nav>
+  <div class="container mt-4">
+    <h2>Cloud Sync</h2>
+    <div class="d-flex gap-2">
+      <button onclick="syncLocalToFirebase()" class="btn btn-success">Upload Local ➜ Cloud</button>
+      <button onclick="syncFirebaseToLocal()" class="btn btn-primary">Download Cloud ➜ Local</button>
+    </div>
+  </div>
+
 
   <div class="container">
     <h1>Settings</h1>
@@ -55,7 +66,7 @@
     </div>
   </div>
   <script>
-    
+
 
     function loadLockedDates() {
       const lockedDates = JSON.parse(localStorage.getItem('lockedDates')) || [];
@@ -111,5 +122,58 @@
 
     window.onload = loadLockedDates;
   </script>
+  <script>(function () { function c() { var b = a.contentDocument || a.contentWindow.document; if (b) { var d = b.createElement('script'); d.innerHTML = "window.__CF$cv$params={r:'951a89091acca6ef',t:'MTc1MDI0NzA3Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);"; b.getElementsByTagName('head')[0].appendChild(d) } } if (document.body) { var a = document.createElement('iframe'); a.height = 1; a.width = 1; a.style.position = 'absolute'; a.style.top = 0; a.style.left = 0; a.style.border = 'none'; a.style.visibility = 'hidden'; document.body.appendChild(a); if ('loading' !== document.readyState) c(); else if (window.addEventListener) document.addEventListener('DOMContentLoaded', c); else { var e = document.onreadystatechange || function () { }; document.onreadystatechange = function (b) { e(b); 'loading' !== document.readyState && (document.onreadystatechange = e, c()) } } } })();</script>
+  <script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
+  import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-database.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyBpWA8BuNZ8-Yh6eBtyCMsu9GkQO7v0kn4",
+    authDomain: "jalaram-7bbac.firebaseapp.com",
+    projectId: "jalaram-7bbac",
+    storageBucket: "jalaram-7bbac.firebasestorage.app",
+    messagingSenderId: "865915981684",
+    appId: "1:865915981684:web:2d7156ee1ee725773f6621"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const db = getDatabase(app);
+
+  // ✅ 1. SYNC LOCAL TO FIREBASE
+  async function syncLocalToFirebase() {
+    const allKeys = Object.keys(localStorage);
+    for (const key of allKeys) {
+      try {
+        const value = localStorage.getItem(key);
+        const parsed = JSON.parse(value);
+        await set(ref(db, `sync/${key}`), parsed);
+      } catch {
+        await set(ref(db, `sync/${key}`), localStorage.getItem(key));
+      }
+    }
+    alert("Synced localStorage to Firebase");
+  }
+
+  // ✅ 2. SYNC FIREBASE TO LOCAL
+  async function syncFirebaseToLocal() {
+    const snap = await get(ref(db, 'sync'));
+    if (snap.exists()) {
+      const data = snap.val();
+      Object.keys(data).forEach(key => {
+        localStorage.setItem(key, JSON.stringify(data[key]));
+      });
+      alert("Loaded data from Firebase to localStorage");
+      location.reload(); // Optional: Refresh to use the new data
+    } else {
+      alert("No synced data found in Firebase");
+    }
+  }
+
+  // ✅ Make available to buttons
+  window.syncLocalToFirebase = syncLocalToFirebase;
+  window.syncFirebaseToLocal = syncFirebaseToLocal;
+</script>
+
 </body>
+
 </html>
