--- a/settings.html
+++ b/settings.html
@@ -44,12 +44,13 @@
     </div>
   </nav>
   <div class="container mt-4">
-    <h2>Cloud Sync</h2>
-    <div class="d-flex gap-2">
-      <button onclick="syncLocalToFirebase()" class="btn btn-success">Upload Local ➜ Cloud</button>
-      <button onclick="syncFirebaseToLocal()" class="btn btn-primary">Download Cloud ➜ Local</button>
-    </div>
+  <h2>Cloud Sync</h2>
+  <div class="d-flex gap-2">
+    <button onclick="syncLocalToFirebase()" class="btn btn-success">Upload Local ➜ Cloud</button>
+    <button onclick="syncFirebaseToLocal()" class="btn btn-primary">Download Cloud ➜ Local</button>
   </div>
+</div>
+
 
 
   <div class="container">
@@ -125,7 +126,9 @@
   <script>(function () { function c() { var b = a.contentDocument || a.contentWindow.document; if (b) { var d = b.createElement('script'); d.innerHTML = "window.__CF$cv$params={r:'951a89091acca6ef',t:'MTc1MDI0NzA3Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);"; b.getElementsByTagName('head')[0].appendChild(d) } } if (document.body) { var a = document.createElement('iframe'); a.height = 1; a.width = 1; a.style.position = 'absolute'; a.style.top = 0; a.style.left = 0; a.style.border = 'none'; a.style.visibility = 'hidden'; document.body.appendChild(a); if ('loading' !== document.readyState) c(); else if (window.addEventListener) document.addEventListener('DOMContentLoaded', c); else { var e = document.onreadystatechange || function () { }; document.onreadystatechange = function (b) { e(b); 'loading' !== document.readyState && (document.onreadystatechange = e, c()) } } } })();</script>
   <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
-  import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-database.js";
+  import {
+    getDatabase, ref, set, get
+  } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-database.js";
 
   const firebaseConfig = {
     apiKey: "AIzaSyBpWA8BuNZ8-Yh6eBtyCMsu9GkQO7v0kn4",
@@ -139,7 +142,21 @@
   const app = initializeApp(firebaseConfig);
   const db = getDatabase(app);
 
-  // ✅ 1. SYNC LOCAL TO FIREBASE
+  function showToast(message, type = "success") {
+    const toast = document.createElement("div");
+    toast.className = `custom-toast ${type}`;
+    toast.textContent = message;
+    document.body.appendChild(toast);
+
+    setTimeout(() => {
+      toast.classList.add("show");
+      setTimeout(() => {
+        toast.classList.remove("show");
+        setTimeout(() => document.body.removeChild(toast), 300);
+      }, 3000);
+    }, 100);
+  }
+
   async function syncLocalToFirebase() {
     const allKeys = Object.keys(localStorage);
     for (const key of allKeys) {
@@ -151,10 +168,9 @@
         await set(ref(db, `sync/${key}`), localStorage.getItem(key));
       }
     }
-    alert("Synced localStorage to Firebase");
+    showToast("✔️ Local data synced to cloud!");
   }
 
-  // ✅ 2. SYNC FIREBASE TO LOCAL
   async function syncFirebaseToLocal() {
     const snap = await get(ref(db, 'sync'));
     if (snap.exists()) {
@@ -162,14 +178,14 @@
       Object.keys(data).forEach(key => {
         localStorage.setItem(key, JSON.stringify(data[key]));
       });
-      alert("Loaded data from Firebase to localStorage");
-      location.reload(); // Optional: Refresh to use the new data
+      showToast("✔️ Cloud data loaded to local!");
+      // Optional:
+      // location.reload();
     } else {
-      alert("No synced data found in Firebase");
+      showToast("⚠️ No cloud data found", "error");
     }
   }
 
-  // ✅ Make available to buttons
   window.syncLocalToFirebase = syncLocalToFirebase;
   window.syncFirebaseToLocal = syncFirebaseToLocal;
 </script>
